@@ -49,10 +49,13 @@ import com.intellij.openapi.actionSystem.DataContext;
 import com.intellij.openapi.actionSystem.IdeActions;
 import com.intellij.openapi.actionSystem.impl.SimpleDataContext;
 import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.application.WriteAction;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.command.WriteCommandAction;
 import com.intellij.openapi.command.undo.UndoManager;
+import com.intellij.openapi.diagnostic.LogLevel;
+import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Document;
 import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.editor.EditorFactory;
@@ -61,6 +64,7 @@ import com.intellij.openapi.editor.EditorMouseHoverPopupManager;
 import com.intellij.openapi.editor.ScrollType;
 import com.intellij.openapi.editor.actionSystem.EditorActionManager;
 import com.intellij.openapi.editor.actionSystem.TypedAction;
+import com.intellij.openapi.editor.colors.EditorColorsUtil;
 import com.intellij.openapi.editor.ex.EditorEx;
 import com.intellij.openapi.editor.ex.MarkupModelEx;
 import com.intellij.openapi.editor.ex.RangeHighlighterEx;
@@ -129,12 +133,9 @@ import kotlin.Unit;
 import org.intellij.lang.annotations.Language;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 
 import java.awt.Dimension;
 import java.awt.Point;
-import java.io.File;
-import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -200,21 +201,8 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
     return LanguageLevel.JDK_11;
   }
 
-  @Override
-  protected void configureByExistingFile(@NotNull VirtualFile virtualFile) {
-    super.configureByExistingFile(virtualFile);
-    setActiveEditors(getEditor());
-  }
-
-  @Override
-  protected VirtualFile configureByFiles(@Nullable File rawProjectRoot, VirtualFile @NotNull ... vFiles) throws IOException {
-    VirtualFile file = super.configureByFiles(rawProjectRoot, vFiles);
-    setActiveEditors(getEditor());
-    return file;
-  }
-
   private void setActiveEditors(Editor @NotNull ... editors) {
-    EditorTracker.getInstance(myProject).setActiveEditorsInTests(Arrays.asList(editors));
+    EditorTracker.getInstance(myProject).setActiveEditorsInTests(List.of(editors));
   }
 
   @Override
@@ -474,31 +462,36 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
       XMLLanguage.INSTANCE.unregisterLanguageExtension(extension);
     }
 
-    String location = getTestName(false) + ".xsd";
-    final String url = "http://myschema/";
-    ExternalResourceManagerExBase.registerResourceTemporarily(url, location, getTestRootDisposable());
+    try {
+      String location = getTestName(false) + ".xsd";
+      final String url = "http://myschema/";
+      ExternalResourceManagerExBase.registerResourceTemporarily(url, location, getTestRootDisposable());
 
-    configureByFiles(null, BASE_PATH + getTestName(false) + ".xml", BASE_PATH + getTestName(false) + ".xsd");
+      configureByFiles(null, BASE_PATH + getTestName(false) + ".xml", BASE_PATH + getTestName(false) + ".xsd");
 
-    assertEmpty(myTestDaemonCodeAnalyzer.waitHighlighting(getProject(), getEditor().getDocument(), HighlightSeverity.ERROR));
+      assertEmpty(myTestDaemonCodeAnalyzer.waitHighlighting(getProject(), getEditor().getDocument(), HighlightSeverity.ERROR));
 
-    Editor[] allEditors = EditorFactory.getInstance().getAllEditors();
-    Editor schemaEditor = null;
-    for (Editor editor : allEditors) {
-      Document document = editor.getDocument();
-      PsiFile psiFile = PsiDocumentManager.getInstance(getProject()).getPsiFile(document);
-      if (psiFile == null) continue;
-      if (location.equals(psiFile.getName())) {
-        schemaEditor = editor;
-        break;
+      Editor[] allEditors = EditorFactory.getInstance().getAllEditors();
+      Editor schemaEditor = null;
+      for (Editor editor : allEditors) {
+        Document document = editor.getDocument();
+        PsiFile psiFile = PsiDocumentManager.getInstance(getProject()).getPsiFile(document);
+        if (psiFile == null) continue;
+        if (location.equals(psiFile.getName())) {
+          schemaEditor = editor;
+          break;
+        }
       }
+      delete(Objects.requireNonNull(schemaEditor));
+
+      List<HighlightInfo> errors =
+        myTestDaemonCodeAnalyzer.waitHighlighting(getProject(), getEditor().getDocument(), HighlightSeverity.ERROR);
+      assertNotEmpty(errors);
     }
-    delete(Objects.requireNonNull(schemaEditor));
-
-    assertNotEmpty(myTestDaemonCodeAnalyzer.waitHighlighting(getProject(), getEditor().getDocument(), HighlightSeverity.ERROR));
-
-    for (LanguageFilter extension : extensions) {
-      XMLLanguage.INSTANCE.registerLanguageExtension(extension);
+    finally {
+      for (LanguageFilter extension : extensions) {
+        XMLLanguage.INSTANCE.registerLanguageExtension(extension);
+      }
     }
   }
 
@@ -750,13 +743,18 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
   }
 
   private static TextRange @NotNull [] getHighlightersTextRange(@NotNull MarkupModel markup) {
-    RangeHighlighter[] highlighters = markup.getAllHighlighters();
+    List<RangeHighlighter> highlighters = getAllValidHighlighters(markup);
 
-    TextRange[] result = new TextRange[highlighters.length];
-    for (int i = 0; i < highlighters.length; i++) {
-      result[i] = ProperTextRange.create(highlighters[i]);
+    TextRange[] result = new TextRange[highlighters.size()];
+    for (int i = 0; i < highlighters.size(); i++) {
+      result[i] = ProperTextRange.create(highlighters.get(i));
     }
     return orderByHashCode(result); // markup.getAllHighlighters returns unordered array
+  }
+
+  private static List<RangeHighlighter> getAllValidHighlighters(@NotNull MarkupModel markup) {
+    // there might be invalid RH returned from markup.getAllHighlighters() because they added/removed concurrently
+    return ContainerUtil.filter(markup.getAllHighlighters(), h -> h.isValid());
   }
 
   private static <T extends Segment> T @NotNull [] orderByHashCode(T @NotNull [] highlighters) {
@@ -973,7 +971,6 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
     configureByText(JavaFileType.INSTANCE, "class X{ void f() {" + body + "<caret>\n} }");
 
     Project alienProject = PlatformTestUtil.loadAndOpenProject(createTempDirectory().toPath().resolve("alien.ipr"), getTestRootDisposable());
-    DaemonCodeAnalyzer.getInstance(alienProject).setUpdateByTimerEnabled(true);
 
     DaemonProgressIndicator.runInDebugMode(() -> {
       try {
@@ -989,9 +986,7 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
         FileEditorManager fe = FileEditorManager.getInstance(alienProject);
         Editor alienEditor = Objects.requireNonNull(fe.openTextEditor(alienDescriptor, false));
         ((EditorImpl)alienEditor).setCaretActive();
-        PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-        PsiDocumentManager.getInstance(alienProject).commitAllDocuments();
-
+        myDaemonCodeAnalyzer.restart(getTestName(false));
         // start daemon in the main project. should check for its cancel when typing in alien
         AtomicBoolean checked = new AtomicBoolean();
         Runnable callbackWhileWaiting = () -> {
@@ -1160,8 +1155,7 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
       PsiFile psiFile = getFile();
       Project project = psiFile.getProject();
       CodeInsightTestFixtureImpl.ensureIndexesUpToDate(project);
-      Runnable callbackWhileWaiting = () -> type(' ');
-      myTestDaemonCodeAnalyzer.waitForDaemonToFinish(getProject(), getEditor().getDocument(), callbackWhileWaiting);
+      myTestDaemonCodeAnalyzer.waitForDaemonToFinish(getProject(), getEditor().getDocument(), () -> type(' '));
     }
     catch (Exception ignored) {
       return;
@@ -1373,15 +1367,12 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
 
       configureByText(PlainTextFileType.INSTANCE, "");
       Editor editor = getEditor();
-      EditorTracker editorTracker = EditorTracker.Companion.getInstance(myProject);
-      setActiveEditors(editor);
       while (HeavyProcessLatch.INSTANCE.isRunning()) {
         PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
       }
       type("xxx"); // restart daemon
-      assertTrue(editorTracker.getActiveEditors().contains(editor));
+      assertTrue(EditorTracker.Companion.getInstance(myProject).getActiveEditors().contains(editor));
       assertSame(editor, FileEditorManager.getInstance(myProject).getSelectedTextEditor());
-
 
       // wait for the first pass to complete
       long start = System.currentTimeMillis();
@@ -1429,13 +1420,11 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
 
       configureByText(PlainTextFileType.INSTANCE, "");
       Editor editor = getEditor();
-      EditorTracker editorTracker = EditorTracker.Companion.getInstance(myProject);
-      setActiveEditors(editor);
       while (HeavyProcessLatch.INSTANCE.isRunning()) {
         PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
       }
       type("xxx"); // restart daemon
-      assertTrue(editorTracker.getActiveEditors().contains(editor));
+      assertTrue(EditorTracker.Companion.getInstance(myProject).getActiveEditors().contains(editor));
       assertSame(editor, FileEditorManager.getInstance(myProject).getSelectedTextEditor());
 
 
@@ -1489,9 +1478,7 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
     DocumentUtil.executeInBulk(editor.getDocument(), () -> {
       registerFakePass(applied, collected);
 
-      EditorTracker editorTracker = EditorTracker.Companion.getInstance(myProject);
-      setActiveEditors(editor);
-      assertTrue(editorTracker.getActiveEditors().contains(editor));
+      assertTrue(EditorTracker.Companion.getInstance(myProject).getActiveEditors().contains(editor));
       assertSame(editor, FileEditorManager.getInstance(myProject).getSelectedTextEditor());
 
       applied.clear();
@@ -1957,6 +1944,7 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
 
     @Override
     public void annotate(@NotNull PsiElement element, @NotNull AnnotationHolder holder) {
+      long start = System.currentTimeMillis();
       if (element instanceof PsiComment && element.getText().equals("//XXX")) {
         while (wait.get()) {
           Thread.onSpinWait();
@@ -1964,23 +1952,26 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
         holder.newAnnotation(HighlightSeverity.ERROR, SWEARING).range(element).create();
         iDidIt();
       }
-      LOG.debug(getClass()+".annotate("+element+") = "+didIDoIt());
+      LOG.debug(getClass().getSimpleName()+".annotate("+element+") = "+didIDoIt()+" ("+(System.currentTimeMillis()-start)+"ms)");
     }
     private static List<HighlightInfo> myHighlights(MarkupModel markupModel) {
-      return Arrays.stream(markupModel.getAllHighlighters())
+      return getAllValidHighlighters(markupModel)
+        .stream()
         .map(highlighter -> HighlightInfo.fromRangeHighlighter(highlighter))
         .filter(Objects::nonNull)
         .filter(info -> SWEARING.equals(info.getDescription())).toList();
     }
   }
   private static List<HighlightInfo> highlightsWithDescription(MarkupModel markupModel, String description) {
-    return Arrays.stream(markupModel.getAllHighlighters())
-          .map(highlighter -> HighlightInfo.fromRangeHighlighter(highlighter))
-          .filter(Objects::nonNull)
-          .filter(info -> description.equals(info.getDescription())).toList();
+    return getAllValidHighlighters(markupModel)
+      .stream()
+      .map(highlighter -> HighlightInfo.fromRangeHighlighter(highlighter))
+      .filter(Objects::nonNull)
+      .filter(info -> description.equals(info.getDescription())).toList();
   }
 
   public void testInvalidPSIElementsCreatedByTypingNearThemMustBeRemovedImmediatelyMeaningLongBeforeTheHighlightingPassFinished() {
+    //setTraceDaemonLoggerLevel();
     @Language("JAVA")
     String text = """
       class X {
@@ -2024,13 +2015,31 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
       assertNotEmpty(highlightsWithDescription(markupModel, errorDescription));
       assertNotEmpty(MyVerySlowAnnotator.myHighlights(markupModel));
 
+      getProject().getMessageBus().connect(getTestRootDisposable()).subscribe(DaemonCodeAnalyzer.DAEMON_EVENT_TOPIC, new DaemonCodeAnalyzer.DaemonListener() {
+        @Override
+        public void daemonStarting(@NotNull Collection<? extends @NotNull FileEditor> fileEditors) {
+          ReadAction.run(()->
+          LOG.debug("daemonStarting("+fileEditors+"). errors=\n"+StringUtil.join(DaemonCodeAnalyzerImpl.getHighlights(getEditor().getDocument(), HighlightSeverity.ERROR, getProject()),"\n")));
+        }
+
+        @Override
+        public void daemonFinished(@NotNull Collection<? extends @NotNull FileEditor> fileEditors) {
+          ReadAction.run(()->
+          LOG.debug("daemonFinished("+fileEditors+"). errors=\n"+StringUtil.join(DaemonCodeAnalyzerImpl.getHighlights(getEditor().getDocument(), HighlightSeverity.ERROR, getProject()),"\n")));
+        }
+
+        @Override
+        public void daemonCancelEventOccurred(@NotNull String reason) {
+          ReadAction.run(()->
+          LOG.debug("daemonCancelEventOccurred("+reason+"). errors=\n"+StringUtil.join(DaemonCodeAnalyzerImpl.getHighlights(getEditor().getDocument(), HighlightSeverity.ERROR, getProject()),"\n")));
+        }
+      });
       MyVerySlowAnnotator.wait.set(true);
       repairingChange.run(); //repair invalid psi
       AtomicBoolean success = new AtomicBoolean();
       // register very slow annotator and make sure the invalid PSI highlighting was removed before this annotator finished
       TestTimeOut n = TestTimeOut.setTimeout(100, TimeUnit.SECONDS);
       Runnable checkHighlighted = () -> {
-        PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
         if (highlightsWithDescription(markupModel, errorDescription).isEmpty() && MyVerySlowAnnotator.wait.get()) {
           // removed before highlighting is finished
           MyVerySlowAnnotator.wait.set(false);
@@ -2177,17 +2186,19 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
   }
 
   private static @NotNull List<HighlightInfo> getErrorsFromMarkup(@NotNull MarkupModel model) {
-    return Arrays.stream(model.getAllHighlighters())
+    return getAllValidHighlighters(model)
+      .stream()
       .map(m -> HighlightInfo.fromRangeHighlighter(m))
       .filter(Objects::nonNull)
       .filter(h -> h.getSeverity() == HighlightSeverity.ERROR)
       .toList();
   }
   private static void assertNoDuplicateInfosFromMarkup(@NotNull MarkupModel model) {
-    List<HighlightInfo> infos = Arrays.stream(model.getAllHighlighters())
-          .map(m -> HighlightInfo.fromRangeHighlighter(m))
-          .filter(Objects::nonNull)
-          .toList();
+    List<HighlightInfo> infos = getAllValidHighlighters(model)
+      .stream()
+      .map(m -> HighlightInfo.fromRangeHighlighter(m))
+      .filter(Objects::nonNull)
+      .toList();
     Map<TextRange, List<HighlightInfo>> byRange = infos.stream().collect(Collectors.groupingBy(info -> TextRange.create(info)));
     for (List<HighlightInfo> errors : byRange.values()) {
       Set<String> set = ContainerUtil.map2Set(errors, e -> e.getDescription());
@@ -2266,7 +2277,8 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
       LOG.debug(getClass()+".annotate("+element+") = "+didIDoIt());
     }
     static List<HighlightInfo> myHighlights(MarkupModel markupModel) {
-      return Arrays.stream(markupModel.getAllHighlighters())
+      return getAllValidHighlighters(markupModel)
+        .stream()
         .map(highlighter -> HighlightInfo.fromRangeHighlighter(highlighter))
         .filter(Objects::nonNull)
         .filter(info -> MSG.equals(info.getDescription())).toList();
@@ -2338,23 +2350,22 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
     Document document = getDocument(getFile());
     assertEmpty(myTestDaemonCodeAnalyzer.waitHighlighting(getProject(), getEditor().getDocument(), HighlightSeverity.ERROR));
     List<Pair<DEvent,String>> eventLog = Collections.synchronizedList(new ArrayList<>());
-    getProject().getMessageBus().connect(getTestRootDisposable()).subscribe(DaemonCodeAnalyzer.DAEMON_EVENT_TOPIC,
-            new DaemonCodeAnalyzer.DaemonListener() {
-              @Override
-              public void daemonStarting(@NotNull Collection<? extends @NotNull FileEditor> fileEditors) {
-                eventLog.add(Pair.create(DEvent.STARTED,""));
-              }
+    getProject().getMessageBus().connect(getTestRootDisposable()).subscribe(DaemonCodeAnalyzer.DAEMON_EVENT_TOPIC, new DaemonCodeAnalyzer.DaemonListener() {
+      @Override
+      public void daemonStarting(@NotNull Collection<? extends @NotNull FileEditor> fileEditors) {
+        eventLog.add(Pair.create(DEvent.STARTED,""));
+      }
 
-              @Override
-              public void daemonFinished(@NotNull Collection<? extends @NotNull FileEditor> fileEditors) {
-                eventLog.add(Pair.create(DEvent.FINISHED, ""));
-              }
+      @Override
+      public void daemonFinished(@NotNull Collection<? extends @NotNull FileEditor> fileEditors) {
+        eventLog.add(Pair.create(DEvent.FINISHED, ""));
+      }
 
-              @Override
-              public void daemonCancelEventOccurred(@NotNull String reason) {
-                eventLog.add(Pair.create(DEvent.CANCELED, reason));
-              }
-            });
+      @Override
+      public void daemonCancelEventOccurred(@NotNull String reason) {
+        eventLog.add(Pair.create(DEvent.CANCELED, reason));
+      }
+    });
     for (int i=0; i<100; i++) {
       myTestDaemonCodeAnalyzer.waitForDaemonToFinish(getProject(), document);
       eventLog.clear();
@@ -2362,15 +2373,19 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
       type("x");
       myTestDaemonCodeAnalyzer.waitForDaemonToStart(getProject(), document, 10_000);
       myDaemonCodeAnalyzer.disableUpdateByTimer(disposable);
-      {
-        long deadline = System.currentTimeMillis() + 10; // do something for awhile
-        while (System.currentTimeMillis() < deadline) {
-          PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
+      try {
+        {
+          long deadline = System.currentTimeMillis() + 10; // do something for awhile
+          while (System.currentTimeMillis() < deadline) {
+            PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
+          }
         }
-      }
 
-      type("y");
-      Disposer.dispose(disposable); //reenable DCA
+        type("y");
+      }
+      finally {
+        Disposer.dispose(disposable); //reenable DCA
+      }
       myTestDaemonCodeAnalyzer.waitForDaemonToFinish(getProject(), document);
 
       assertEventsArePaired(eventLog);
@@ -2463,8 +2478,7 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
 
     configureByText(JavaFileType.INSTANCE, text);
     myTestDaemonCodeAnalyzer.waitHighlighting(getProject(), getEditor().getDocument(), HighlightSeverity.ERROR);
-    RangeHighlighter[] highlighters = getSortedHighs();
-    String h1 = StringUtil.join(Arrays.asList(highlighters), "\n");
+    String h1 = renderHighlighters(getSortedHighlights());
 
     GCWatcher tracking = GCWatcher.tracking(myFile);
     myFile = null;
@@ -2474,19 +2488,36 @@ public class DaemonRespondToChangesTest extends ProductionDaemonAnalyzerTestCase
     myFile = PsiDocumentManager.getInstance(myProject).getPsiFile(getEditor().getDocument());
     myDaemonCodeAnalyzer.restart(getTestName(false));
     myTestDaemonCodeAnalyzer.waitHighlighting(getProject(), getEditor().getDocument(), HighlightSeverity.ERROR);
-    RangeHighlighter[] highlighters2 = getSortedHighs();
-    String h2 = StringUtil.join(Arrays.asList(highlighters2), "\n");
+    String h2 = renderHighlighters(getSortedHighlights());
 
     assertEquals(h1, h2);
   }
 
-  private RangeHighlighter @NotNull [] getSortedHighs() {
-    RangeHighlighter[] highlighters = DocumentMarkupModel.forDocument(myEditor.getDocument(), myProject, true).getAllHighlighters();
-    Arrays.sort(highlighters, (o1, o2) -> {
+  private static @NotNull String renderHighlighters(List<RangeHighlighter> highlighters) {
+    return StringUtil.join(highlighters, h->h.getTextRange()+":"+h.getTextAttributes(EditorColorsUtil.getGlobalOrDefaultColorScheme()), "\n");
+  }
+
+  private List<RangeHighlighter> getSortedHighlights() {
+    List<RangeHighlighter> highlighters = getAllValidHighlighters(DocumentMarkupModel.forDocument(myEditor.getDocument(), myProject, true));
+    return ContainerUtil.sorted(highlighters, (o1, o2) -> {
       HighlightInfo h1 = HighlightInfo.fromRangeHighlighter(o1);
       HighlightInfo h2 = HighlightInfo.fromRangeHighlighter(o2);
       return h1 == null || h2 == null ? Segment.BY_START_OFFSET_THEN_END_OFFSET.compare(o1, o2) : HighlightInfoUpdaterImpl.BY_OFFSETS_AND_HASH_ERRORS_FIRST.compare(h1, h2);
     });
-    return highlighters;
+  }
+  public static void setTraceDaemonLoggerLevel() {
+    Logger.getInstance("#com.intellij.codeInsight.daemon.impl.BackgroundUpdateHighlightersUtil").setLevel(LogLevel.TRACE);
+    Logger.getInstance("#com.intellij.codeInsight.daemon.impl.DaemonCodeAnalyzerImpl").setLevel(LogLevel.TRACE);
+    Logger.getInstance("#com.intellij.codeInsight.daemon.impl.DaemonProgressIndicator").setLevel(LogLevel.TRACE);
+    Logger.getInstance("#com.intellij.codeInsight.daemon.impl.FileStatusMap").setLevel(LogLevel.TRACE);
+    Logger.getInstance("#com.intellij.codeInsight.daemon.impl.GeneralHighlightingPass").setLevel(LogLevel.TRACE);
+    Logger.getInstance("#com.intellij.codeInsight.daemon.impl.HighlightInfoUpdaterImpl").setLevel(LogLevel.TRACE);
+    Logger.getInstance("#com.intellij.codeInsight.daemon.impl.PassExecutorService").setLevel(LogLevel.TRACE);
+    Logger.getInstance("#com.intellij.codeInsight.daemon.impl.UpdateHighlightersUtil").setLevel(LogLevel.TRACE);
+    Logger.getInstance("#com.intellij.openapi.editor.impl.RangeHighlighterImpl").setLevel(LogLevel.TRACE);
+    Logger.getInstance("#com.intellij.openapi.editor.impl.IntervalTreeImpl").setLevel(LogLevel.TRACE);
+    // clear internal buffer
+    //TestLoggerFactory.onFixturesInitializationStarted(true);
+    //TestLoggerFactory.onTestStarted();
   }
 }
